added parametrization of endpoints for better clarity
